<resources>
    <string name="app_name">Reminder Pro</string>
    <string name="subtitle_main">There is nothing to be forgotten!</string>


    <string name="note">Note</string>
    <string name="voice_recorder">Voice Recorder</string>
    <string name="reminder_location">Reminder Location</string>

    <string name="voices">Voices</string>
    <string name="notes">Notes</string>
    <string name="locations">Locations</string>

    <string name="voices_description">record voice</string>
    <string name="note_description">add any text</string>
    <string name="locations_description">select any location on the map</string>

    <string name="location_service_active">location reminder in active</string>
    <string name="message">message</string>
    <string name="listening">Listening…</string>

    <string name="add">add</string>
    <string name="empty">There is no item to display</string>
    <string name="pipe">|</string>
    <string name="zero_time">00 : 00 : 00</string>
    <string name="start_recording">start</string>
    <string name="stop_recording">stop</string>
    <string name="zero_size">0.00 KB</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="play">play</string>
    <string name="stop">stop</string>

    <string name="not_show_again">not show again</string>
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="maybe_later">Maybe later</string>

    <string name="permission">Permission</string>
    <string name="permission_audio">Memory and microphone access are required to record audio.</string>
    <string name="permission_location">Your location access are required to open map</string>
    
    <string name="gps">GPS</string>
    <string name="gps_status_details">GPS turn off, do you want turn on?</string>

    <string name="do_you_sure_delete">Do you want to delete?</string>
    <string name="title">Title</string>
    <string name="location_information">location information</string>
    <string name="dot">...</string>
    <string name="enter_some_things">enter some things</string>
    <string name="location_title">location title</string>
    <string name="location_description">location description</string>


    <!-- Error -->
    <string name="error_can_not_create_file">Sorry, there is a problem creating the file.</string>
    <string name="error_unknown">unknown error</string>
    <string name="error_empty_title">empty title</string>
    <string name="error_empty_content">empty content</string>
    <string name="error_empty_name">please enter your name</string>


    <string name="Byte">Byte</string>
    <string name="kiloByte">KioByte</string>
    <string name="megabyte">MB</string>
    <string name="gigabyte">GB</string>
    <string name="trabyte">TB</string>

    <string name="coming_soon">coming soon!</string>
    <string name="select_any_where">select any where</string>
    <string name="select">select</string>
    <string name="distance_alarm">Distance alarm :</string>
    <string name="distance_value"> %s meter</string>
    <string name="meter">meter</string>
    <string name="write_everything">write everything</string>

    <string name="selected_number">%s selected</string>

    <string name="settings">Settings</string>
    <string name="change_language">Language application</string>
    <string name="change_to_fa">change language to farsi</string>
    <string name="change_to_en">change language to english</string>
    <string name="persian">فارسی</string>
    <string name="english">English</string>

     <string name="just_now">just now</string>
    <string name="min_ago"> mints ago </string>
    <string name="hour_ago"> hours ago </string>
    <string name="day_ago"> days ago </string>
    <string name="week_ago"> weeks ago </string>
    <string name="month_ago"> months ago </string>
    <string name="year_ago"> years ago </string>

    <string name="map_style">Map styles</string>
    <string name="map_style_basic">basic</string>
    <string name="map_style_light">light</string>
    <string name="map_style_satellite">Satellite</string>
    <string name="map_style_ice_cream">Ice Cream</string>
    <string name="map_style_dark">dark</string>
    <string name="map_style_decimal">dark</string>
    <string name="map_style_map_style">map style</string>

    <string name="share_text">share text</string>

    <string name="TB"> %s TB </string>
    <string name="GB"> %s GB </string>
    <string name="MG"> %s MG </string>
    <string name="KB"> %s KB </string>
    <string name="BYTE"> %s B </string>

    <string name="distance_my_location">Your distance from the select location </string>
    <string name="error_distance_the_selected_location_near">The selected location should be %s meters away</string>
    <string name="distance_default">300 meter</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_hint">write to us, from everything you think will make us better</string>
    <string name="send">Send</string>
    <string name="failure_send_feedback">failed send feedback try again</string>
    <string name="success_send_feedback">success send feedback, thank you for send feedback</string>
    <string name="your_name">your name</string>

    <string name="rating">rating and review</string>
    <string name="share_app">share application</string>
    <string name="menu">Menu</string>
    <string name="internet">internet</string>
    <string name="internet_status_off">can not connect internet, please check internet connection</string>

    <string name="api_key">AIzaSyDtaFQk2Mt1oshQIIc947C1Jl4rC-c2lrs</string>
    <string name="api_mapbox_key">pk.eyJ1IjoiZmFyc2hpZHJvb2hpIiwiYSI6ImNqczd2c2ZlajBpeWw0NHBoYXN1YWUxN3oifQ.Cf2K7w0GvZTbeTacGZol9g</string>
    <string name="map_default_style">mapbox://styles/farshidroohi/cjr2f00e66xyz2srs69kwkmuz</string>
    <string name="save_voice">Save Voice</string>

</resources>
