<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:padding="0dp"
        tools:context=".views.activities.DashboardActivity">


    <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:gravity="center|bottom"
            tools:ignore="DisableBaselineAlignment,MissingConstraints,UselessParent">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txtTitle"
                    style="@style/TitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="16dp"
                    android:padding="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/color_tint_item_main"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/txtSubtitle"
                    style="@style/SubtitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="8dp"
                    android:text="@string/subtitle_main"
                    android:textColor="@color/color_tint_item_main"
                    android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>

<LinearLayout android:layout_width="match_parent"
              android:gravity="end"
              android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/imgSettings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:padding="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_settings"
                android:tint="@android:color/white"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"/>

</LinearLayout>
  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="240dp">

        <ir.roohi.farshid.reminderpro.customViews.CustomItemView
                android:id="@+id/itemSoundRecorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bgColor="@color/color_item_main"
                android:foreground="@drawable/ripple_radius"
                app:title="@string/voices"
                app:description="@string/voices_description"
                android:tint="@color/color_tint_item_main"
                app:item_icon="@drawable/ic_record_voice_over"
                app:item_radius="30dp"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_header"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="150dp"
                app:layout_constraintEnd_toEndOf="parent"/>

          <ir.roohi.farshid.reminderpro.customViews.CustomItemView
                  android:id="@+id/itemNote"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:bgColor="@color/color_item_main"
                  android:foreground="@drawable/ripple_radius"
                  app:title="@string/notes"
                  app:description="@string/note_description"
                  android:tint="@color/color_tint_item_main"
                  app:item_icon="@drawable/ic_note"
                  app:item_radius="30dp"
                  android:layout_marginTop="16dp"
                  app:layout_constraintTop_toBottomOf="@+id/itemSoundRecorder"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="100dp"
                  app:layout_constraintEnd_toEndOf="parent"/>


    <ir.roohi.farshid.reminderpro.customViews.CustomItemView
            android:id="@+id/itemReminderLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bgColor="@color/color_item_main"
            android:foreground="@drawable/ripple_radius"
            app:title="@string/locations"
            app:description="@string/locations_description"
            android:tint="@color/color_tint_item_main"
            app:item_icon="@drawable/ic_location"
            app:item_radius="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/itemNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>

  </LinearLayout>
    <LinearLayout
            android:id="@+id/layoutBottomSheet"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/bg_bottom_sheet"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:behavior_hideable="false"
            app:behavior_peekHeight="50dp">

   <LinearLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/layoutPeek"
            android:gravity="center_vertical|start"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/color_background"
            android:orientation="horizontal">

        <ImageView android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:padding="7dp"
                   android:id="@+id/imgArrowBottomSheet"
                   android:src="@drawable/ic_keyboard_arrow"
                   android:tint="#4c4c4c"
                   tools:ignore="ContentDescription"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_vertical"
                  style="@style/TitleStyle"
                  android:textColor="#4c4c4c"
                  android:text="@string/menu"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

         <ImageView android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:rotation="180"
                    android:background="@drawable/bg_shadow"
                    tools:ignore="ContentDescription"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:id="@+id/layoutRating"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:background="?attr/selectableItemBackground">

       <ImageView android:layout_width="50dp"
                  android:layout_height="50dp"
                  android:padding="12dp"
                  android:src="@drawable/ic_star"
                  android:tint="@color/color_subtitle"
                  tools:ignore="ContentDescription"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/rating"
                  style="@style/SubtitleStyle"
                  android:gravity="center_vertical"
                  android:textSize="15sp"/>

        <ImageView android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/color_divider"
                   android:layout_marginTop="16dp"
                   android:layout_marginBottom="16dp"
                   tools:ignore="ContentDescription"/>

    </LinearLayout>


        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:gravity="center"
                      android:background="?attr/selectableItemBackground"
                      android:id="@+id/layoutFeedback"
                      android:layout_height="0dp"
                      android:layout_weight="1">

       <ImageView android:layout_width="50dp"
                  android:layout_height="50dp"
                  android:padding="12dp"
                  android:src="@drawable/ic_feedback"
                  android:tint="@color/color_subtitle"
                  tools:ignore="ContentDescription"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/send_feedback"
                  style="@style/SubtitleStyle"
                  android:gravity="center_vertical"
                  android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:background="?attr/selectableItemBackground"
                  android:id="@+id/layoutSettings"
                  android:layout_height="0dp"
                  android:layout_weight="1">

       <ImageView android:layout_width="50dp"
                  android:layout_height="50dp"
                  android:padding="12dp"
                  android:src="@drawable/ic_settings"
                  android:tint="@color/color_subtitle"
                  tools:ignore="ContentDescription"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/settings"
                  style="@style/SubtitleStyle"
                  android:gravity="center_vertical"
                  android:textSize="15sp"/>

    </LinearLayout>
    </LinearLayout>

   </LinearLayout>
</LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
