<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_top_radius"
        android:gravity="center|bottom"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:src="@drawable/ic_title"/>

            <TextView
                    style="@style/TitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/location_information"
                    android:textSize="20sp"/>

        </LinearLayout>

        <ir.roohi.farshid.reminderpro.customViews.CustomInputEditText
                android:id="@+id/edtTitle"
                style="@style/InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/location_title"
                app:zv_style="@style/EditText"
        />

        <ir.roohi.farshid.reminderpro.customViews.CustomInputEditText
                android:id="@+id/edtDesc"
                style="@style/InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/location_description"
                app:zv_style="@style/EditText"
        />

        <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SubtitleStyle"
                    android:padding="10dp"
                    android:text="@string/distance_alarm"/>


        </LinearLayout>

        <LinearLayout
                android:visibility="visible"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txtDistance"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    style="@style/SubtitleStyle"
                    android:padding="10dp"
                    android:text="500 meter"/>

            <SeekBar android:layout_width="0dp"
                     android:layout_weight="1"
                     android:id="@+id/seekBar"
                     android:max="2000"
                     android:progress="500"
                     android:layout_height="wrap_content"/>
        </LinearLayout>


        <com.zarinpal.libs.views.ZarinButton
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@android:color/white"
                app:zp_cornerRadius="12"
                app:zp_firstColor="@color/colorAccent"
                app:zp_fontFace="iransans_bold"
        />

    </LinearLayout>


</LinearLayout>